@@ -17,6 +17,7 @@
  * RCS: @(#) $Id$
  */
 
+#undef STATIC_BUILD
 #ifndef USE_TCL_STUBS
 #   define USE_TCL_STUBS
 #endif
